# graph-plotter-raylib

./: CMakeLists.txt  LICENSE  README.md  main.c
build_points/: pnts.c  pnts.h  zoom.c  zoom.h
